# devils_checkerboard

./: CMakeLists.txt  devils_checkerboard.cc
